Switch to React and preact-compat

--- a/src/main/frontend/index.ejs
+++ b/src/main/frontend/index.ejs
@@ -13,5 +13,5 @@
 	<meta name="description" content="XXX">
 	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
-<body></body>
+<body><div id="app" /></body>
 </html>
